[gd_scene load_steps=9 format=3 uid="uid://c05fqg8pemnaq"]

[ext_resource type="Script" uid="uid://b2r2bm6rg87oq" path="res://turrets/blueprints/materials/resource/resource_material.gd" id="1_agokj"]
[ext_resource type="PackedScene" uid="uid://c8mov5t2utcf1" path="res://turrets/blueprints/materials/log/log_01/mesh_log_1.tscn" id="2_yk8bx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ak4a3"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="TextMesh" id="TextMesh_cjt2i"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ak4a3")
text = "STATUS: 
"

[sub_resource type="SphereShape3D" id="SphereShape3D_1b871"]
radius = 3.10156

[sub_resource type="Animation" id="Animation_jaqfo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ew3c0"]
resource_name = "is_used"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.2, 1.2, 1.2), Vector3(0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"is_used"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5dvr"]
_data = {
&"RESET": SubResource("Animation_jaqfo"),
&"is_used": SubResource("Animation_ew3c0")
}

[node name="ResourceMesh" type="RigidBody3D" groups=["material"]]
script = ExtResource("1_agokj")

[node name="mesh_node" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="mesh_log_1" parent="mesh_node" instance=ExtResource("2_yk8bx")]

[node name="debug_status" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("TextMesh_cjt2i")

[node name="Area3D" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_1b871")
debug_color = Color(0, 0.628235, 0.732545, 0.42)

[node name="anim_player" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_h5dvr")
}
